src/app/core/sass/core.scss
/**
 * @provide core
 *
 * @require mixins
 * @require classes
 * @require icons
 * @require imports
 * @require vars
 */

/*************************** DEFAULTS ***************************/

html * {
	font-family: "Roboto", "Helvetica", "Arial";

	-webkit-user-select: none;
	-moz-user-select: -moz-none;
	-ms-user-select: none;
	user-select: none;

	@include vendorize(box-sizing, border-box);
}

input, textarea {
	-moz-user-select: text;
}

ul{
	padding: 0;
	margin: 0;
}

li{
	list-style: none;
}

[data-role=header]{
	height: $headerHeight;
	line-height: $padding * 6;
	background-image: url("../img/darkdenim3.png");
	@include transition(all .2s);

	// &.fixed {
		position: absolute;
		top:0; right: 0; left: 0;
	// }

	&.mini {
		height: $headerHeight/2;
		line-height: $headerHeight/2;
		font-size: .5rem;
	}

	.title{
		color: $textColor;
		text-align: center;
		font-size: 1.3em; // don't use rem here as this font size should be dependent on the header bar font size which can vary.
		font-weight: 400;
		// font-family: Roboto;
		line-height: 2.3em;
	}

	.header-button {
		color: $textColor;
		font-size: 1.6em; // don't use rem here as this font size should be dependent on the header bar font size which can vary.
		padding: 0 $padding;
		line-height: 1.6em;
		position: absolute;

		&:active{
			color: $red;
		}

		&.left {
			float: left;
		}

		&.right {
			float: right;
		}
	}

	.menu-button{
		@extend .header-button;
	}

	.back-button{
		@extend .header-button;
	}

	.forward-button{
		@extend .header-button;
	}
}

[data-role=content] {
	padding: 0px;
	@include transition(top .2s);

	// &.fixed {
		position: absolute;
		top: $headerHeight;
		bottom: 0; left: 0; right: 0;
		overflow: scroll;
		// -webkit-backface-visibility: hidden;
		-webkit-overflow-scrolling: touch;
	// }

	&.mini {
		top: $headerHeight/2;
	}
}

